# cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: demo-hotdog-rater.sh  regen-wire.sh
src/: cli.rs  config.rs  error.rs  exit.rs  lib.rs  main.rs  output.rs
src/client/: mod.rs
src/cmd/: boundary.rs  branches.rs  clear.rs  commit.rs  context.rs  diff.rs  edge.rs  fork.rs  guide.rs  mod.rs  node.rs  projects.rs  pull.rs  show.rs  status.rs
src/staging/: mod.rs
src/state/: mod.rs
src/wire/: mod.rs
tests/: help.rs  runtime.rs
wire/: .openapi-generator-ignore  Cargo.toml
wire/.openapi-generator/: FILES
wire/src/: lib.rs
wire/src/apis/: branches_api.rs  configuration.rs  graph_api.rs  health_api.rs  mod.rs  projects_api.rs
wire/src/models/: add_edge_delta.rs  add_node_delta.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_404_response.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_404_response_detail.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_404_response_detail_one_of.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_409_response.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_409_response_detail.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_422_response.rs  apply_branch_deltas_v1_branches__branch_id__deltas_post_422_response_one_of.rs  boundary_response.rs  branch_create_response.rs  branch_list_response.rs  branch_meta.rs  branch_not_active_body.rs  branch_ref.rs  delete_edge_delta.rs  delete_node_delta.rs  delta_apply_response.rs  delta_field_error_body.rs  edge.rs  flatten_boundary_delta.rs  graph_response.rs  healthz_response.rs  http_validation_error.rs  inline_object.rs  inline_object_1.rs  inline_object_1_detail.rs  inline_object_2.rs  inline_object_3.rs  inline_object_4.rs  inline_object_4_detail.rs  inline_object_4_detail_one_of.rs  inline_object_5.rs  inline_object_5_detail.rs  inline_object_detail.rs  mod.rs  node.rs  node_data.rs  node_neighborhood_response.rs  not_found_body.rs  (+22 more)
