[package]
name = "hydrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Command-line client for hydrate.sh — author your system graph from the terminal."
repository = "https://github.com/hydrate-sh/cli"
license = "MIT"
# Distributed as prebuilt binaries via GitHub Releases, not crates.io.
publish = false

# `wire` is the committed openapi-generator client (generated, never hand-edited);
# regenerate it with scripts/regen-wire.sh.
[workspace]
members = ["wire"]

[dependencies]
clap = { version = "4", features = ["derive"] }
# rustls (not the generated crate's default native-tls) — no OpenSSL system dep,
# friendlier for the cross-compiled release binaries.
hydrate_wire = { path = "wire", default-features = false, features = ["rustls-tls"] }
# The generated client is async; a small current-thread runtime drives it so the
# command handlers stay synchronous.
tokio = { version = "1", features = ["rt", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
# Robust URL parsing for the base-URL scheme/host check (plaintext http only
# to localhost). Already in the dependency tree via the wire client.
url = "2"
# Used only to attach the per-commit Idempotency-Key header on a client built
# from the same reqwest already in the tree (rustls, no OpenSSL).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# SHA-256 of the staged batch -> the Idempotency-Key (at-most-once apply).
sha2 = "0.10"

[dev-dependencies]
# Isolated temp dirs for the .hydrate workdir-state tests.
tempfile = "3"

[lib]
name = "hydrate"
path = "src/lib.rs"

# Canonical binary.
[[bin]]
name = "hydrate"
path = "src/main.rs"

# Short alias — same entry point.
[[bin]]
name = "hyd"
path = "src/bin/hyd.rs"
